objects/ASI_BRD_Generic_CRM_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used for ASI Brand &amp; Luxury Projects
- Mapping of Acquisition Market with Person Account Record Type (Brand)
- Mapping of Acquisition Market with Primary Market HTML Id	
- Mapping of Acquisition Market for generating &quot;Internal Member No.&quot;
- Mapping of Acquisition Market with the Import Record Type of Luxury Account</description>
    <fields>
        <fullName>ASI_BRD_LUX_Record_Type__c</fullName>
        <label>LUX Record Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_BRD_Primary_Market_HTML_Id__c</fullName>
        <label>Primary Market HTML Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_BRD_Record_Type__c</fullName>
        <label>Record Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_BRD_Running_Number__c</fullName>
        <label>Running Number</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <label>ASI Generic Brand CRM Mapping</label>
</CustomObject>